@@ -28,6 +28,7 @@ Nidhi Malhotra          <nidhi.malhotra@pmcs.com>
 Eduard Martinescu       <martines@rochester.rr.com>
 Frédéric L. W. Meunier  <...>
 Kimihiro Nonaka         <...>
+Gabriele Pohl           <contact@dipohl.de>
 Alex Samorukov          <samm@os2.kiev.ua>
 Keiji Sawada            <card_captor@users.sourceforge.net>
 Manfred Schwarb         <manfred99@gmx.ch>
